# motor_sequence_learning

./: .gitignore  README.md  pyproject.toml
smb_ssl_task/: __init__.py  __main__.py  advanced_gui.py  config.py  data_logging.py  display.py  game.py  input_handler.py  msp.py  scenes.py  task_pretrain.py  task_scan.py  task_test.py  task_training.py
